--- a/top/Paginas/Ttgl.html
+++ b/top/Paginas/Ttgl.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container" class="animated bounce">Posicion Numero 1
         <p>Tengen Toppa Gurren Lagann</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="300" height="250" src="https://www.youtube.com/embed/C_t47BVtPuE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://static.vix.com/es/sites/default/files/styles/large/public/t/tengen-toppa-gurren-lagann-portada.jpg?itok=7IfdOvqY" alt="ttgl">
     </div>
