--- a/top/Paginas/angbe.html
+++ b/top/Paginas/angbe.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 14
         <p>Angel Beats</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/-hA4na_3jT0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://vignette.wikia.nocookie.net/angelbeats-es/images/c/c9/Angel_Beats%21_series.jpg/revision/latest?cb=20160523232150&path-prefix=es" alt="ttgl">
     </div>
