--- a/top/Paginas/bokmin.html
+++ b/top/Paginas/bokmin.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 13
         <p>Bokura wa minna Kawaisou</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/QPHf1UH9m7I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://pm1.narvii.com/6052/d9311c069a65b4b05e695642c37cd9c5ce5a52d3_hq.jpg" alt="ttgl">
     </div>
