--- a/top/Paginas/bunstdogs.html
+++ b/top/Paginas/bunstdogs.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 6
         <p>Bungou Stray Dogs</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/v9OhNoPAZJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="350" height="250" src="https://upload.wikimedia.org/wikipedia/en/f/f8/Bung%C5%8D_Stray_Dogs_volume_1.jpg" alt="ttgl">
     </div>
