--- a/top/Paginas/dal.html
+++ b/top/Paginas/dal.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 5
         <p>Date a live</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/aKnGB9HcM-I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://upload.wikimedia.org/wikipedia/commons/4/42/Date_A_Live_anime_logo.jpg" alt="ttgl">
     </div>
