--- a/top/Paginas/dogdays.html
+++ b/top/Paginas/dogdays.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 7
         <p>Dog Days</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/65kl-HfOhLs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="http://i.imgur.com/89A9q.jpg" alt="ttgl">
     </div>
