--- a/top/Paginas/geksh.html
+++ b/top/Paginas/geksh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 10
         <p>Gekkan Shoujo Nozaki-kun</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
     <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/EjgOD9vruTE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>        
     <img class="imagen" width="450" height="250" src="https://vignette.wikia.nocookie.net/eswikia/images/9/9e/Gekkan_Shoujo_Nozaki-kun.png/revision/latest?cb=20161003212522" alt="ttgl">
     </div>
