--- a/top/Paginas/guicrw.html
+++ b/top/Paginas/guicrw.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 11
         <p>Guilty Crown</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/DjUtmbZt8zc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>        
     <img class="imagen" width="450" height="250" src="http://1.bp.blogspot.com/-vXu1nYHxOvA/Ul8H-jRukHI/AAAAAAAABkw/uTpKDU82hCk/s1600/guilty+crown+portada.jpg" alt="ttgl">
     </div>
