--- a/top/Paginas/kuro.html
+++ b/top/Paginas/kuro.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 15
         <p>Kuroshitsuji</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/16PSXYvWJXE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://scontent.fscl8-1.fna.fbcdn.net/v/t1.0-9/20638447_1121107064655484_4929454154033742862_n.jpg?_nc_cat=0&oh=185d0d3bfd61b0eadcf198cfb6870a83&oe=5C1651E1" alt="ttgl">
     </div>
