--- a/top/Paginas/ns.html
+++ b/top/Paginas/ns.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 8
         <p>Naruto Shippuden</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/5n20jAvoBYo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="350" height="250" src="https://img1.ak.crunchyroll.com/i/spire4/1c1df98707aa0f22aa54342af725e48a1491245343_full.jpg" alt="ttgl">
     </div>
