--- a/top/Paginas/oregairu.html
+++ b/top/Paginas/oregairu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 3
         <p>Yahari ore no seishun love come wa machigatteiru</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video2" width="300" height="250" src="https://www.youtube.com/embed/MCzdxMWeMZE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="http://2.bp.blogspot.com/-3RhHXyr1xKE/VdmOFoE8qTI/AAAAAAAAADs/OD1yugGnI1Q/s1600/top_img.jpg" alt="ttgl">
     </div>
