--- a/top/Paginas/tlvru.html
+++ b/top/Paginas/tlvru.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 9
         <p>To love-ru</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/q5z57qYE2hw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="350" height="250" src="https://imagessl4.casadellibro.com/a/l/t0/24/9788416805624.jpg" alt="ttgl">
     </div>
