--- a/top/Paginas/aonex.html
+++ b/top/Paginas/aonex.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">Posicion Numero 12
         <p>Ao no exorcist</p>
-        <p  class="boton"><a href="../inicio.html" class="bot">X</a></p>
+        <p  class="boton"><a href="../index.html" class="bot">X</a></p>
         <iframe class="video" width="350" height="250" src="https://www.youtube.com/embed/5ZPELMm-W68" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <img class="imagen" width="450" height="250" src="https://img.zonared.com/images/analisis/1400/1473/2.jpg" alt="ttgl">
     </div>
